# ASCII

./: .gitignore  AUDIT.md  CMakeLists.txt  IMPLEMENTATION.md  IMPLEMENTATION_REMEDIATION_PLAN.md  PLAN.md  PRESETS.md  QUESTIONS.md  README.md  ROADMAP.md  build_noopencv_check.cmd  setup_windows_deps.cmd
src/: main.cpp
src/audio/: audio_player.cpp  audio_player.hpp
src/cli/: args.cpp  args.hpp
src/core/: cell_stats.cpp  cell_stats.hpp  color_space.cpp  color_space.hpp  config.cpp  config.hpp  edge_detector.cpp  edge_detector.hpp  frame_source.cpp  frame_source.hpp  motion.cpp  motion.hpp  pipeline.cpp  pipeline.hpp  replay.cpp  replay.hpp  temporal.cpp  temporal.hpp  types.hpp
src/glyph/: char_sets.cpp  char_sets.hpp  font_loader.cpp  font_loader.hpp  glyph_cache.cpp  glyph_cache.hpp  glyph_stats.hpp
src/mapping/: bilateral_grid.cpp  bilateral_grid.hpp  char_selector.cpp  char_selector.hpp  color_mapper.cpp  color_mapper.hpp
src/render/: bitmap_renderer.cpp  bitmap_renderer.hpp  block_renderer.cpp  block_renderer.hpp  blue_noise_64.hpp  dither.cpp  dither.hpp  terminal_renderer.cpp  terminal_renderer.hpp  video_encoder.cpp  video_encoder.hpp
src/terminal/: terminal.cpp  terminal.hpp
tests/: CMakeLists.txt  test_comprehensive.cpp  test_critical_fixes.cpp  test_integration.cpp
